# LM2VLM

./: pyproject.toml
vlm_train/: basic_inference.py  lm_train.py  q_former_train.py
vlm_train/datasets/: cc_dataloader.py  lm_dataloader.py
vlm_train/datasets/cc_subset/: dataset_info.json  state.json
vlm_train/networks/: lm_to_vlm.py  q_former.py
vlm_train/utils/: calculate_recall.py  filter_dataset.py  utils.py
